@@ -8,8 +8,13 @@
 #ifndef UTIL_H
 #define UTIL_H
 
+#include "config.h"
 #include <glib.h>
 #include <gdk-pixbuf/gdk-pixbuf.h>
+
+#ifdef HAVE_GIO
+#    include <gio/gio.h>
+#endif
 
 char *get_md5_hash(const char *str);
 char *compute_auth_token(const char *password, const char *timestamp);
@@ -22,5 +27,9 @@ const char *get_home_directory(void);
 char *obfuscate_string(char *str);
 char *lastfm_url_decode (const char *url);
 char *lastfm_url_encode (const char *url);
+
+#ifdef HAVE_GIO
+void launch_url (const char *url, GAppLaunchContext *context);
+#endif
 
 #endif
