@@ -1,5 +1,9 @@
 2008-11-08  Luca Bruno  <lethalman88@gmail.com>
 
+	* src/util.c (launch_url): added
+
+	* configure.ac: check for GIO as optional dependency
+
 	* src/vgl-main-window.c (create_main_menu):
 	Use ui_menu_item_create_from_icon
 	Reorganize Actions menu items
